# synergy-scheduler-manager

./: .coveragerc  .gitreview  AUTHORS  CONTRIBUTING.rst  ChangeLog  HACKING.rst  README  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
config/: policy.json  synergy_scheduler.conf
doc/source/: conf.py  index.rst  installation.rst  usage.rst
packaging/: README.md
packaging/debian/: changelog  control  copyright  python-synergy-scheduler-manager.install  python-synergy-scheduler-manager.postinst  python-synergy-scheduler-manager.postrm  python-synergy-scheduler-manager.preinst  rules
packaging/docker/centos7/: Dockerfile  build.sh
packaging/docker/ubuntu-14.04/: Dockerfile  build.sh
packaging/rpm/: python-synergy-scheduler-manager.spec
synergy_scheduler_manager/: __init__.py  fairshare.py  fairshare_manager.py  keystone_manager.py  nova_manager.py  project_manager.py  queue.py  queue_manager.py  quota.py  quota_manager.py  scheduler_manager.py
synergy_scheduler_manager/auth/: plugin.py
synergy_scheduler_manager/client/: command.py
synergy_scheduler_manager/common/: block_device.py  compute.py  domain.py  endpoint.py  flavor.py  hypervisor.py  messaging.py  priority.py  project.py  queue.py  quota.py  request.py  role.py  server.py  service.py  share.py  token.py  trust.py  user.py  utils.py
synergy_scheduler_manager/tests/: __init__.py  test_dynamic_quota.py  test_fairshare_manager.py  test_queue.py  test_queue_manager.py  test_synergy_scheduler_manager.py
synergy_scheduler_manager/tests/functional/: test_fairshare_manager.py  test_scheduler_manager.py
synergy_scheduler_manager/tests/unit/: test_block_device.py  test_compute.py  test_dynamic_quota.py  test_endpoint.py  test_fairshare_manager.py  test_flavor.py  test_hypervisor.py  test_priority.py  test_project.py  test_queue.py  test_queue_manager.py  test_quota.py  test_request.py  test_scheduler_manager.py  test_server.py  test_service.py  test_share.py  test_token.py  test_trust.py  test_user.py
