[metadata]
name = synergy-scheduler-manager
version = 0.1
summary = Provide advanced scheduling (fairshare) capability for OpenStack
description-file =
    README.rst
author = Lisa Zangrando
author-email = lisa.zangrando@pd.infn.it
home-page = https://launchpad.net/synergy-scheduler-manager
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    synergy_scheduler_manager

[entry_points]
synergy.managers =
    fairshare = synergy_scheduler_manager.fairshare:FairShareManager
    queue = synergy_scheduler_manager.queue:QueueManager
    quota = synergy_scheduler_manager.quota:QuotaManager

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = synergy_scheduler_manager/locale
domain = synergy_scheduler_manager

[update_catalog]
domain = synergy_scheduler_manager
output_dir = synergy_scheduler_manager/locale
input_file = synergy_scheduler_manager/locale/synergy_scheduler_manager.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = synergy_scheduler_manager/locale/synergy_scheduler_manager.pot
