[metadata]
name = synergy-scheduler-manager
version = 0.1
summary = Provide advanced scheduling (fairshare) capability for OpenStack
description-file =
    README.rst
author = Lisa Zangrando
author-email = lisa.zangrando@pd.infn.it
home-page = https://launchpad.net/synergy-scheduler-manager
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    synergy_scheduler_manager

[entry_points]
synergy.managers =
    KeystoneManager = synergy_scheduler_manager.keystone_manager:KeystoneManager
    NovaManager = synergy_scheduler_manager.nova_manager:NovaManager
    QueueManager = synergy_scheduler_manager.queue_manager:QueueManager
    QuotaManager = synergy_scheduler_manager.quota_manager:QuotaManager
    FairShareManager = synergy_scheduler_manager.fairshare_manager:FairShareManager
    SchedulerManager = synergy_scheduler_manager.scheduler_manager:SchedulerManager

synergy.commands =
    get_queue = synergy_scheduler_manager.client.command:GetQueue
    get_quota = synergy_scheduler_manager.client.command:GetQuota
    get_priority = synergy_scheduler_manager.client.command:GetPriority
    get_share = synergy_scheduler_manager.client.command:GetShare
    get_usage = synergy_scheduler_manager.client.command:GetUsage

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = synergy_scheduler_manager/locale
domain = synergy_scheduler_manager

[update_catalog]
domain = synergy_scheduler_manager
output_dir = synergy_scheduler_manager/locale
input_file = synergy_scheduler_manager/locale/synergy_scheduler_manager.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = synergy_scheduler_manager/locale/synergy_scheduler_manager.pot
